Fixed footer spacing

--- a/components/Footer/styles.module.css
+++ b/components/Footer/styles.module.css
@@ -17,6 +17,10 @@
   line-height: 1.3;
 }
 
+.footer p:last-child {
+  margin-bottom: 0;
+}
+
 .footer p.highlight {
   color: rgb(255, 28, 94);
 }
